--- a/Stack.html
+++ b/Stack.html
@@ -146,7 +146,7 @@
 
                 <div class="massage-box">
                     <h2>Massage Box</h2>
-                    <div class="massage"></div>
+                    <div class="message"></div>
                 </div>
             </div>
         </div>
